# memc-rs

./: .gitignore  COMM-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Code_of_Conduct.md  DOCKER.md  Dockerfile  LICENSE.md  README.md  RELEASE.md  coverage.sh  run-e2e-tests.sh  testapp.Dockerfile
.github/workflows/: rust.yml
benchmarks/: .19_02_2020.txt.kate-swp  04.02.2026.md  05_12_2020.md  06_12_2020.md  07_08_2020.md  07_12_2020.md  10_08_2020.md  13_07_2020.md  23_02_2020.txt  arm_performance_comparison.md  run_memtier_benchmarks.sh  x86_64_performance.md
doc/: benchmarks.txt
doc/packets/: memcache_ref_session.pcapng
memclt/: Cargo.toml
memclt/src/: main.rs  params_parser.rs
memcrs/: Cargo.toml  coverage.sh  fuzz.sh
memcrs/benches/: handler.rs
memcrs/benchmarks/: 04_02_2025.md  19_02_2020.txt  19_02_2020.txt~  run_memtier_benchmarks.sh
memcrs/fuzz/: Cargo.toml
memcrs/fuzz/fuzz_targets/: fuzz_decode_binary.rs  fuzz_target_1.rs
memcrs/src/: lib.rs
memcrs/src/cache/: cache.rs  cache_capability.rs  error.rs  eviction_policy.rs  mod.rs  pending_tasks_runner.rs  store.rs
memcrs/src/memcache/: builder.rs  eviction_policy.rs  handler.rs  mod.rs  random_policy.rs  server.rs  storage.rs  store.rs  version.rs
memcrs/src/memcache/cli/: parser.rs
memcrs/src/memcache/storage/: storage_tests.rs
memcrs/src/memcache/store/: add_tests.rs  append_prepend_tests.rs  delete_tests.rs  flush_tests.rs  increment_decrement_tests.rs  mod.rs  replace_tests.rs  set_tests.rs  storage_tests.rs
memcrs/src/memcache_server/: client_handler.rs  current_thread_runtime_builder.rs  handler.rs  listen_socket_config.rs  listener_factory.rs  memc_tcp.rs  mod.rs  port_file_writer.rs  register_cancellation.rs  runtime_builder.rs  server_context.rs  server_thread.rs  threadpool_runtime_builder.rs  threadpool_server_builder.rs
memcrs/src/memcache_server/handler/: handler_tests.rs
memcrs/src/memcrs/: error.rs  handler.rs  server.rs  storage.rs  version.rs
memcrs/src/memcrs/mock/: mock_server.rs  mod.rs
memcrs/src/memcrs/storage/: storage_tests.rs
memcrs/src/memory_store/: dash_map_store.rs  mod.rs  moka_store.rs  parallelism.rs  shared_store_state.rs  store.rs
memcrs/src/mock/: handler.rs  key_value.rs  mock_server.rs  mod.rs  value.rs
memcrs/src/protocol/: binary.rs  binary_codec.rs  binary_connection.rs  mod.rs
memcrs/src/protocol/binary/: codec.rs  connection.rs  decoder.rs  encoder.rs  mod.rs  network.rs
memcrs/src/protocol/binary/codec/: binary_decoder_tests.rs  binary_encoder_tests.rs
memcrs/src/protocol/binary/decoder/: binary_decoder_tests.rs
memcrs/src/protocol/binary/encoder/: binary_encoder_tests.rs
memcrs/src/protocol/binary_codec/: binary_codec_tests.rs  binary_decoder_tests.rs  binary_encoder_tests.rs
memcrs/src/server/: client_handler.rs  handler.rs  main.rs  memc_tcp.rs  mod.rs  runtime_builder.rs  tcp_server.rs  timer.rs
memcrs/src/storage/: cache.rs  error.rs  memcstore.rs  mod.rs  store.rs  timer.rs
memcrs/src/storage/memcstore/: storage_tests.rs
memcrs/src/storage/store/: storage_tests.rs
memcrs/tests/: add_check.rs  append_prepend_check.rs  counter_check.rs  delete_check.rs  flush.rs  health_check.rs  replace_check.rs  set_get.rs  set_gets.rs  set_insert_10k_values.rs  set_item_too_large.rs  set_max_item_check.rs  version.rs
memcrs/tests/common/: mod.rs  multi_thread_server.rs  params_builder.rs  process_server.rs  random_port.rs
src/: lib.rs  main.rs
src/memcache/: engine.rs  error.rs  handler.rs  memcache_server.ts  mod.rs  server.rs  storage.rs  timer.rs
src/memcache/mock/: mock_server.rs  mod.rs
src/memcache/storage/: storage_tests.rs
src/protocol/: binary.rs  binary_codec.rs
tests/memcached/: Makefile  config.h  memcached.h  testapp.c
