[package]
name = "memix"
version = "0.1.0"
authors = ["Dariusz Ostolski <dariusz.ostolski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
clap = "2.33.0"
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = "0.2"
bytes = "0.5"
byteorder = "1.3"
serde = "1.0.104"
serde_derive = "1.0.104"
num-traits = "0.2"
num-derive = "0.3"
