[package]
name = "memix"
version = "0.1.0"
authors = ["Dariusz Ostolski <dariusz.ostolski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
futures = "0.3.1"
futures-util = "0.3.4"
clap = "2.33.0"
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
bytes = "0.5"
serde = "1.0.104"
serde_derive = "1.0.104"
num-traits = "0.2"
num-derive = "0.3"
dashmap = "3.5.0"



