[package]
name = "memix"
version = "0.1.0"
authors = ["Dariusz Ostolski <dariusz.ostolski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-listen = "0.2.0"
failure = { version = "0.1.8" }
failure_derive = { version = "0.1.8" }
futures = "0.3.5"
futures-util = "0.3.5"
clap = "2.33.1"
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
bytes = "0.5.5"
serde = "1.0.114"
serde_derive = "1.0.114"
num-traits = "0.2.12"
num-derive = "0.3.0"
dashmap = "3.11.7"
simplelog = "0.8.0"
log = "0.4.8"




