[package]
name = "memcapability"
version = "0.1.0"
authors = ["Dariusz Ostolski <dariusz.ostolski@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
env_logger = "0.11.8"
log = "0.4.27"
memcache = "0.18.0"
termcolor = "1.4.1"
clap = { version = "4.5.34", features = ["derive", "cargo"] }
openssl = { version = "0.10.71", features = ["vendored"] } 
