[package]
name = "memcrs"
version = "0.0.1"
authors = ["Dariusz Ostolski <memc-rs@memc.rs>"]
edition = "2021"

[lib]
name = "memcrs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.2.0"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
core_affinity = "0.8.3"
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
socket2 = { version = "0.6.1", features = ["all"] }
num_cpus = "1.17.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
moka = { version = "0.12.12", features = ["sync"] }
rand = { version = "0.9.2", features = ["small_rng"] }
serde = "1.0.228"
serde_derive = "1.0.228"
tracing = "0.1.44"
tracing-attributes = "0.1.31"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.4", optional = true }

[dev-dependencies]
memcache = "0.19.0"
nix = { version = "0.30.1", features = ["signal"] }
test-case = "3.3.1"
criterion = { version = "0.8.1", features = ["html_reports"] }
procspawn = { version = "1.0.1", features = ["test-support"] }
lazy_static = "1.5.0"

[features]
criterion = []

[[bench]]
name = "handler"
harness = false
